--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ dist-ssr
 # Environment files (important)
 .env
 .env.local
-
+.env.production.local
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
