Fix Gemini API response parsing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nova-–-ai-resume-builder",
+  "name": "nova-ai-resume-builder",
   "private": true,
   "version": "0.0.0",
   "type": "module",
